@@ -1,9 +1,8 @@
 
 #Todo
 
-           Once a drive is past warning level for Fail Percentage start weekly snapraid check on it audit-only (In Process v0.3)
-           Snapraid sends WARNING! messages to stderr. Need to catch these. Currently script aborts for none fatals (v0.3)
-           Add catches for snapraid DANGER! and Warning! messages (Plan v0.3)
+           Once a drive is past warning level for Fail Percentage start weekly snapraid check on it audit-only (In Process v0.3 - Needs max run period setting)
+           Add catches for snapraid DANGER! and Warning! messages (In Process v0.3)
            
            Scrape Log Files and STDOUT for command output processing (Plan v0.4)
            Move Logit messages to external file en_GB.lang to allow translations (Plan v0.4)
@@ -44,7 +43,8 @@
            Check data and parity disks are present (Done v0.3)
            Options to ignore disks not in array or not smart capable (Done v0.3)
            Add Pre-Hash option to config and script - Snapraid v10.0+ only (Done v0.3)
-           Add email support and messages (All working v0.3))
+           Add email support and messages (All working v0.3)
+           Snapraid sends WARNING! messages to stderr. Need to catch these. Currently script aborts for none fatals (Done v0.3)
            
 #Removed
            Allow smart data per disk (Plan v0.4) - No snapraid support
