@@ -8,6 +8,7 @@
             Compares snapraid.conf against last run and warns if they are different
             Calls snapraid check on suspect disks. Settings in snapPERL.conf
             Email re-written. Now only uses Send::Mail::{Sendmail, SMTP, Gmail}
+            Critical: Script aborts for none fatal warnings sent to stderr. Removed.
 
 11/05/2016 v0.2.2
             Added windows support. No help files yet but tested and working. Must have ActivePerl / Strawberry Perl or DWIM Perl installed
